Fix build issues

--- a/TrickyStatusEffects.uplugin
+++ b/TrickyStatusEffects.uplugin
@@ -1,11 +1,11 @@
-﻿{
+{
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "3.55.0",
 	"FriendlyName": "TrickyStatusEffects",
 	"Description": "",
 	"Category": "Tricky Prototyping",
-	"CreatedBy": "Artyom \"Tricky Fat Cat\" Volkov",
+	"CreatedBy": "Artyom \"Tricky_Fat_Cat\" Volkov",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
